@@ -801,7 +801,7 @@ BEGIN
     COMBOBOX        IDC_MATERIAL_COMBO,7,54,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PROPWALL_PHYSICS DIALOGEX 0, 0, 125, 120
+IDD_PROPWALL_PHYSICS DIALOGEX 0, 0, 125, 131
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -814,6 +814,7 @@ BEGIN
     EDITTEXT        115,78,88,40,12,ES_AUTOHSCROLL
     CONTROL         "Can &Drop",11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,103,53,10
     CONTROL         "Collidable",110,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,67,103,51,10
+    CONTROL         "Is Bottom Collidable",116,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,116,83,10
     LTEXT           "Hit Threshol&d",-1,7,19,70,8
     LTEXT           "Slingshot &Force",-1,7,34,69,8
     LTEXT           "&Elasticity",-1,7,63,69,8
